src/objects/AccountHistory__c.object
<CustomObject>
    <fields>
        <fullName>ChildProRexId__c</fullName>
        <description>ehemalige Child ProRex Id</description>
        <formula>UntergeordneterAccount__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ehemalige Child ProRex Id</inlineHelpText>
        <label>Accountnummer untergeordneter Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GueltigBis__c</fullName>
        <description>Enddatum für den übergeordneten Account</description>
        <inlineHelpText>Enddatum für den übergeordneten Account</inlineHelpText>
        <label>gültig bis</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GueltigVon__c</fullName>
        <description>Anfangsdatum für den übergeordneten Account</description>
        <inlineHelpText>Anfangsdatum für den übergeordneten Account</inlineHelpText>
        <label>gültig von</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>P7S1_IdOld__c</fullName>
        <description>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</description>
        <inlineHelpText>Salesforce ID aus einer anderen/alten Org imRahmen einer Datenmigration</inlineHelpText>
        <label>P7S1_IdOld</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ParentProRexId__c</fullName>
        <description>ehemalige Parent ProRex Id</description>
        <formula>UebergeordneterAccount__r.AccountNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>ehemalige Parent ProRex Id</inlineHelpText>
        <label>Accountnummer übergeordneter Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_DWH_ChildProRexID__c</fullName>
        <formula>VALUE( UntergeordneterAccount__r.AccountNumber )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SomTv_DWH_ChildProRexID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Som_NrRolleDwh__c</fullName>
        <description>Bitte wählen Sie den Typ der Hierarchie aus. 1 = Agentur / Agenturverbund
2 = Werbungtreibender /Konzern</description>
        <inlineHelpText>Bitte wählen Sie den Typ der Hierarchie aus. 1 = Agentur / Agenturverbund
2 = Werbungtreibender /Konzern</inlineHelpText>
        <label>Nr Rolle DWH</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>UebergeordneterAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Oberste &quot;Mutter&quot; von diesem Account</description>
        <inlineHelpText>Oberste &quot;Mutter&quot; von diesem Account</inlineHelpText>
        <label>Übergeordneter Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Hierarchie Histories (Übergeordneter Account)</relationshipLabel>
        <relationshipName>AccountHistories</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UntergeordneterAccount__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Untergeordneter Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Account Hierarchie Histories (Untergeordneter Account)</relationshipLabel>
        <relationshipName>AccountHistoriesChild</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Account Hierarchie Historie</label>
    <nameField>
        <displayFormat>HIS-{000}</displayFormat>
        <label>Account-History-Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Hierarchie Histories</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>